--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,8 +8,35 @@ a{
     text-decoration: none;
 }
 
+section {
+    margin: 35px;
+    padding: 35px;;
+}
+
+#nacional {
+    color: greenyellow;
+    font-weight: bold;
+}
+
+#estadual{
+    background: linear-gradient( to right, red, white, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+} 
+
+#habilidades {
+    width: 70%;
+    margin: auto;
+}
+
 .fotos {
     border-radius: 50%;
+    display: inline-block;
+    width: 15%;
+    vertical-align: middle;
+    border: 5px solid black;
+    margin: 50px 20px;
 }
 
 p {
@@ -20,12 +47,8 @@ h3{
     font-weight: bold;
 }
 
-#nome {
-    
-}
-
 .destaque {
-    color: #FF1053;
+    color: #eb0c0c;
     font-weight: bold;
 }
 
@@ -39,16 +62,23 @@ h3{
     
     margin: auto;
     text-align: center;
+    
 }
 
+#sobre-mim {
+    display: inline-block;
+    width: 70%;
+    vertical-align: middle;
+}
 
 #navegador li{
     list-style-type: none;
     background-color: #141B41;
     display: inline-block;
     padding: 10px;
-    margin: 30px;
+    margin-right: 30px;
     font-weight: bold;
+    
 }
 
 #navegador li a:visited {
